syntax = "proto3";

option go_package = "github.com/beam-cloud/beta9/proto";

package bot;

service BotService {
  rpc StartBotServe(StartBotServeRequest) returns (StartBotServeResponse) {}
  rpc BotServeKeepAlive(BotServeKeepAliveRequest)
      returns (BotServeKeepAliveResponse) {}
  rpc PopBotTask(PopBotTaskRequest) returns (PopBotTaskResponse) {}
  rpc PushBotMarker(PushBotMarkerRequest) returns (PushBotMarkerResponse) {}
}

message StartBotServeRequest {
  string stub_id = 1;
  int32 timeout = 2;
}

message StartBotServeResponse { bool ok = 1; }

message BotServeKeepAliveRequest {
  string stub_id = 1;
  int32 timeout = 2;
}
message BotServeKeepAliveResponse { bool ok = 1; }

message PopBotTaskRequest {
  string stub_id = 1;
  string session_id = 2;
  string transition_name = 3;
}

message PopBotTaskResponse {
  bool ok = 1;
  map<string, MarkerList> markers = 2;
  message MarkerList { repeated Marker markers = 1; }
}

message MarkerField {
  string field_name = 1;
  string field_value = 2;
}

message Marker {
  string location_name = 1;
  repeated MarkerField fields = 2;
}

message PushBotMarkerRequest {
  string stub_id = 1;
  string session_id = 2;
  string location_name = 3;
  bytes marker = 4;
}

message PushBotMarkerResponse { bool ok = 1; }
